Polish everything. Now it compatible with lualatex too
Signed-off-by: Kakadu <Kakadu@pm.me>

--- a/papers/pfds2020/06lazy.tex
+++ b/papers/pfds2020/06lazy.tex
@@ -52,8 +52,8 @@ fibs \equiv \cons{1}{\ \cons{1}{\ zip(fibs,\ tail(fibs))}}
 }
 \only<6>{
 \includegraphics[page=5]{tikzpics/fibs.pdf}
-
-и т.д.
 }
+
+\uncover<6->{и т.д.}
 \end{center}
 \end{frame}
